[package]
name = "conrod_glium"
version = "0.70.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "https://docs.rs/conrod"
categories = ["gui"]

[lib]
name = "conrod_glium"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.70" }
glium = { git = "https://github.com/matthewbauer/glium", rev = "67a090b4ad72f00a18c1c03ae90b6ad329400c81" }

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.70" }
conrod_winit = { path = "../conrod_winit", version = "0.70" }
find_folder = "0.3.0"
image = "0.22"
petgraph = "0.4"
rand = "0.7"
winit = { git = "https://github.com/matthewbauer/winit", rev = "85ca15b1ad268f17525043b84050e0feb407cd1f" }

